# TheNexustory2

./: README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: architecture-blueprint.md
scripts/ci/: check_merge_conflicts.py
scripts/dev/: fix_pr_conflicts.py  merge_assistant.py  resolve_conflicts.py
src/storybot/: __init__.py
src/storybot/app/: bootstrap.py  config.py
src/storybot/application/use_cases/: story_runtime.py
src/storybot/domain/: engine.py  interfaces.py  models.py  session_service.py
src/storybot/infrastructure/repositories/: in_memory.py
src/storybot/interfaces/discord/: contracts.py  custom_id.py  handlers.py
tests/unit/: test_engine.py  test_merge_conflict_markers.py  test_session_service.py
tests/unit/interfaces/: test_custom_id.py  test_discord_handlers.py
tests/unit/scripts/: test_fix_pr_conflicts.py  test_merge_assistant.py  test_resolve_conflicts.py
